--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# REDIS CONFIG
+spring.redis.host=localhost
+spring.redis.port=6379
