--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,20 @@ version: '3'
 services:
   # 1. MySQL Database
   mysql:
-    image: mysql:8.0 # Pinned version
+    image: mysql:8.0
     container_name: webhook-mysql
+    platform: linux/amd64
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: webhook_db
     ports:
       - "3306:3306"
 
+  # 2. phpMyAdmin (MySQL UI)
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: phpmyadmin
+    platform: linux/amd64
     depends_on:
       - mysql
     ports:
@@ -21,7 +24,25 @@ services:
       PMA_HOST: mysql
       MYSQL_ROOT_PASSWORD: root
 
-  # 2. Zookeeper (Pinned Version)
+  # 3. Redis (Cache) - NEW
+  redis:
+    image: redis:alpine
+    container_name: webhook-redis
+    ports:
+      - "6379:6379"
+
+  # 4. Redis Commander (Redis UI) - NEW
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    container_name: redis-ui
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8082:8081"
+    depends_on:
+      - redis
+
+  # 5. Zookeeper
   zookeeper:
     image: confluentinc/cp-zookeeper:7.6.0
     container_name: zookeeper
@@ -31,7 +52,7 @@ services:
     ports:
       - "22181:2181"
 
-  # 3. Kafka Broker (Pinned Version)
+  # 6. Kafka Broker
   kafka:
     image: confluentinc/cp-kafka:7.6.0
     container_name: kafka
@@ -47,7 +68,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
-  # 4. Kafka UI
+  # 7. Kafka UI
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka-ui
